--- a/algo/.gitlab-ci-compilers.yml
+++ b/algo/.gitlab-ci-compilers.yml
@@ -1,8 +1,8 @@
 .install-algo-dependencies:
   before_script:
     - apt-get update
-    - apt-get install -y time valgrind python3 wget tar
-    
+    - apt-get install -y time valgrind python2.7 python3 wget tar
+    - ln -sf /usr/bin/python2 /usr/bin/python
 
 .testing-compilers:
   extends: .install-algo-dependencies
