--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -375,7 +375,7 @@ server_tutorial_server:
     - web-pandoc
   variables:
     FIREFOX_VERSION: 45
-  needs: [test_tools, test_browser_unit, code_quality_custom, test_server_unit]
+  needs: [test_tools, code_quality_custom, test_server_unit]
 
 
 # Code quality
@@ -486,7 +486,7 @@ ff45-server-functional:
   extends: .test_server_functional
   variables:
     FIREFOX_VERSION: 45
-  needs: [test_tools, test_browser_unit, code_quality_custom, test_server_unit]
+  needs: [test_tools, code_quality_custom, test_server_unit]
 
 
 
