--- a/server/web2py/applications/vidjil/modules/defs.py.sample
+++ b/server/web2py/applications/vidjil/modules/defs.py.sample
@@ -97,7 +97,7 @@ SCHEDULER_HEARTBEAT = 5
 
 # Directory to search for files
 FILE_SOURCE = '/mnt/data/src'
-FILE_TYPES = ['fasta', 'fastq', 'fastq.gz', 'fa']
+FILE_TYPES = ['fasta', 'fastq', 'fastq.gz', 'fa', 'tsv', 'airr', 'AIRR']
 
 REQUIRE_HTTPS = True
 BROWSER_PATH='browser/index.html'
