gitlab-ci: Launch a job several times to assess its reproducibility
The jobs are taken from .gitlab-ci.ymls provided to a script.
The script is in charge of repeating the jobs the number of times required.

See #4592

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ test_germlines:
 # Includes
 
 include:
+  - local: '.gitlab-test-reproducibility.yml' # launch tests many times
   - local: '/doc/.gitlab-ci.yml' # Doc
   - local: 'algo/.gitlab-ci-compilers.yml' # Stage multiple_tests
   - local: 'algo/.gitlab-ci.yml' # Vidjil-algo pipelines
