--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -16,7 +16,7 @@
       -v $PWD:/app/vidjil
       -v "$PWD/docker/ci/cypress.json":"/app/cypress.json"
       -v "$PWD/docker/ci/cypress_script.bash":"/app/script.bash"
-      --env BROWSER=$BROWSER
+      --env BROWSER=browsers/$BROWSER
       --env HOST=$HOST
       --env PROJECT=$PROJECT
       --env URL=$URL
@@ -36,23 +36,23 @@
 
 
 ## Cypress with server
-server_early:
+server1:
   extends:
     - .test_cypress_server
     - .need_for_moderate_server
   variables:
-    BROWSER: browsers/firefox_supported/firefox
+    BROWSER: firefox_supported/firefox
 
 ## Cypress with server
-server_late:
+s2:
   extends:
     - .test_cypress_server
   parallel:
     matrix:
       - BROWSER: [
-          browsers/firefox_latest/firefox,
-          browsers/firefox_legacy/firefox,
-          browsers/chrome_supported/chrome,
-          browsers/chrome_latest/chrome,
-          browsers/chrome_legacy/chrome
+          firefox_latest/firefox,
+          firefox_legacy/firefox,
+          chrome_supported/chrome,
+          chrome_latest/chrome,
+          chrome_legacy/chrome
         ]
