--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -36,7 +36,7 @@
 
 
 ## Cypress with server
-server1:
+server1-ff-supported:
   extends:
     - .test_cypress_server
     - .need_for_moderate_server
