--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,9 @@
   - cp -p doc/analysis-example.vidjil browser/
 
 .before_script_global_docker: &before_script_global_docker
-  - apt update && apt install -y make unzip wget
-  - *before_script_global
+  before_script:
+    - apt update && apt install -y make unzip wget
+    - *before_script_global
 
 before_script:
   - *before_script_global
@@ -449,8 +450,7 @@ code_quality_custom:
 test_server_unit:
     image: python:2.7-slim
     stage: test_unit
-    before_script:
-      - *before_script_global_docker
+    <<: *before_script_global_docker
     script:
       - apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends gcc libldap2-dev libssl-dev libsasl2-dev python-ijson libyajl2 python-cffi wget unzip procps
       - pip install -r requirements.txt
