--- a/algo/.gitlab-ci.yml
+++ b/algo/.gitlab-ci.yml
@@ -1,3 +1,52 @@
+
+## vidjil-algo, regular tests
+
+algo_unit:
+  stage: test_unit
+  script: make -C algo unit_coverage
+  artifacts:
+    <<: *lcov_artifact
+  only:
+    - /^feature-.*a.*\/.*$/
+    - schedules
+
+algo_should:
+  stage: test_functional
+  script: make -C algo should_coverage
+  artifacts:
+    <<: *lcov_artifact
+    reports:
+      junit: algo/tests/should.xml
+  only:
+    - /^feature-.*a.*\/.*$/
+    - schedules
+
+algo_shouldvdj:
+  stage: test_shouldvdj
+  script: make -C algo shouldvdj_coverage
+  artifacts:
+    <<: *lcov_artifact
+  only:
+    - /^feature-.*a.*\/.*$/
+    - schedules
+
+algo_coverage:
+  stage: coverage
+  coverage: /^\s*lines\.*:\s+([0-9.]+\%)/
+  script:
+    - make -C algo lcov_reports
+    - mv algo/reports/ coverage
+  artifacts:
+    paths:
+      - coverage/
+    expire_in: 1 week
+  only:
+    - /^feature-.*a.*\/.*$/
+    - schedules
+
+
+## vidjil-algo, other tests
+
 profiling_algo:
   stage: benchmark
   image: gcc:9
