--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -5,6 +5,9 @@
     - .test_server_base_dind
     # - .need_for_staged_server
   script: &test_cypress_server_script
+    - docker exec docker_uwsgi_1  mkdir /usr/share/vidjil/server/web2py/applications/vidjil/errors
+    - docker exec docker_uwsgi_1  chmod a+w /usr/share/vidjil/server/web2py/applications/vidjil/errors
+    - docker exec docker_uwsgi_1  chown www-data /mnt/upload/uploads/ /mnt/result/results
     - docker pull "vidjilci/cypress_with_browsers:latest"
     - >
       docker run
@@ -23,6 +26,14 @@
       --shm-size=1GB
       --network="host"
       "vidjilci/cypress_with_browsers:latest" bash script.bash  $TEST_FILES
+  artifacts:
+    reports:
+      junit: $CYPRESS_PATH/reports/test-cypress-*.xml
+    paths:
+      - $CYPRESS_PATH
+      - server/web2py/applications/vidjil/errors/*
+    expire_in: 7 day
+    when: always
   variables:
     CYPRESS_PATH: server/web2py/applications/vidjil/tests/cypress
     HOST: local
