server_location.conf: Fix configuration to prevent upload timeout
During the upload we faced timeouts. We used `proxy_read_timeout` to prevent this however it was not enough.

1. The missing `=` after `location` seemed to prevent the rule from being applied.
2. We also need to extend the `send_timeout`.
3. Rather than increasing the timeouts for all proxies, we restrict that to uwsgi proxy.

Fix #4670

--- a/docker/vidjil-client/conf/server_location.conf
+++ b/docker/vidjil-client/conf/server_location.conf
@@ -5,8 +5,9 @@ location ~ ^/(vidjil|admin) {
     ###
 }
 
-location /vidjil/file/upload {
+location = /vidjil/file/upload {
     include /etc/nginx/conf.d/web2py/uwsgi.conf;
-    uwsgi_read_timeout 10m;
+    uwsgi_read_timeout 30m;
+    uwsgi_send_timeout 30m;
     client_max_body_size 20G;
 }
