--- a/algo/.gitlab-ci.yml
+++ b/algo/.gitlab-ci.yml
@@ -61,7 +61,7 @@ algo_coverage:
 # Benchmark
 
 .benchmark-algo:
-  image:  gcc:6.3
+  image:  gcc:11
   extends: .install-algo-dependencies
   stage: benchmark
   script:
@@ -70,7 +70,7 @@ algo_coverage:
     paths:
       - algo/tests/benchmark.log
   when: manual
-  dependencies: []
+  needs: []
   only:
     - /^feature-.*a.*\/.*$/
   tags:
